--- a/styles/configuracoes/meus-anuncios.module.css
+++ b/styles/configuracoes/meus-anuncios.module.css
@@ -2,12 +2,15 @@
   background-color: var(--cor-secundaria);
   border-radius: 16px;
   color: var(--cor-texto);
-  padding: 10px 10px 20px 30px;
-  margin-bottom: 20px;
+  padding: 10px 10px 20px 20px;
+}
+.header h2{
+  margin-bottom: 0.5rem;
+  margin-top: 0.7rem;
 }
 .divider{
   background-color: var(--cor-borda);
-  height: 2px;
+  height: 0.5px;
   width: 100vh;
 }
 
