--- a/styles/cadastro_login/cadastro.module.css
+++ b/styles/cadastro_login/cadastro.module.css
@@ -11,13 +11,13 @@
   overflow: hidden;
 }
 .loginLogo {
-  margin-bottom: 40px; 
+  margin-bottom: 40px;
   width: 200px;
   z-index: 10;
 }
 
 /* Form principal */
-.formBackground{
+.formBackground {
   position: relative;
   background: var(--cor-primaria);
   border: 1px solid var(--cor-borda);
@@ -75,7 +75,10 @@
   color: #fff;
   font-size: 14px;
   outline: none;
-  transition: border 0.25s ease, box-shadow 0.25s ease, background 0.25s ease;
+  transition:
+    border 0.25s ease,
+    box-shadow 0.25s ease,
+    background 0.25s ease;
 }
 .input::placeholder {
   color: var(--cor-texto-terciario);
@@ -83,7 +86,7 @@
 .input:focus {
   border-color: var(--cor-borda);
   box-shadow: 0 0 8px rgba(251, 184, 41, 0.677);
-  background: rgba(255,255,255,0.02);
+  background: rgba(255, 255, 255, 0.02);
 }
 .input:-webkit-autofill,
 .input:-webkit-autofill:hover,
@@ -108,8 +111,8 @@
 .checkbox {
   accent-color: var(--cor-amarelo-medio);
   margin-right: 6px;
-} 
-.rememberMe{
+}
+.rememberMe {
   font-size: 10px;
   display: flex;
   align-items: center;
@@ -146,7 +149,9 @@
   font-size: 15px;
   font-weight: 600;
   cursor: pointer;
-  transition: transform 0.18s ease, box-shadow 0.18s ease;
+  transition:
+    transform 0.18s ease,
+    box-shadow 0.18s ease;
   margin-top: 30px;
 }
 .createButton:hover:not(:disabled) {
@@ -295,4 +300,3 @@
     }
   }
 }
-
