--- a/styles/componentes/ListingCard.module.css
+++ b/styles/componentes/ListingCard.module.css
@@ -53,7 +53,7 @@
   font-weight: bold;
   margin-bottom: 12px;
   padding-top: 10px;
-  color: var(--cor-amarelo-medio)
+  color: var(--cor-amarelo-medio);
 }
 
 .listingDetails {
