--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
-@import './colors.css'; 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+@import "./colors.css";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 
-html{
+html {
   font-size: 12px;
 }
 body {
