--- a/styles/carrinho/carrinho.module.css
+++ b/styles/carrinho/carrinho.module.css
@@ -5,10 +5,13 @@
   color: var(--cor-texto);
   padding: 10px 10px 20px 20px;
 }
-
+.header h2{
+  margin-bottom: 0.5rem;
+  margin-top: 0.7rem;
+}
 .divider{
   background-color: var(--cor-borda);
-  height: 2px;
+  height: 0.5px;
   width: 100vh;
 }
 
