--- a/styles/item/criar-anuncio.module.css
+++ b/styles/item/criar-anuncio.module.css
@@ -1,3 +1,10 @@
+.pageContainer{
+  padding: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .registerForm {
   position: relative;
   max-width: 700px;
