--- a/styles/item/detalhes.module.css
+++ b/styles/item/detalhes.module.css
@@ -271,12 +271,27 @@
   box-shadow: 0 5px 15px rgba(220, 53, 69, 0.4);
 }
 
-.toastNotification {
+.toastNotificationSuccess {
   position: fixed;
   bottom: 30px;
   left: 50%;
   transform: translateX(-50%);
   background-color: var(--cor-sucess);
+  color: white;
+  padding: 16px 24px;
+  border-radius: 8px;
+  z-index: 1000;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  font-size: 1rem;
+  font-weight: 500;
+  animation: toast-in 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+.toastNotificationError {
+  position: fixed;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: var(--cor-error);
   color: white;
   padding: 16px 24px;
   border-radius: 8px;
