--- a/styles/configuracoes/editarperfil.module.css
+++ b/styles/configuracoes/editarperfil.module.css
@@ -192,6 +192,41 @@
   margin-bottom: 20px;
 }
 
+/* ----------------- Endereço Form ----------------- */
+.enderecoFormContainer1 {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr 3fr;
+  gap: 20px;
+  width: 100%;
+  margin-bottom: 20px;
+}
+.enderecoFormContainer2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.fieldGroupHalf {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.select {
+  width: 100%;
+  background: var(--cor-amarelo-escuro);
+  border: 1px solid var(--cor-borda);
+  border-radius: 10px;
+  box-sizing: border-box;
+  padding: 9px;
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+}
+
+
 /* ----------------- Botões ----------------- */
 .buttonsContainer {
   display: flex;
