--- a/styles/componentes/PedidoCardVendedor.module.css
+++ b/styles/componentes/PedidoCardVendedor.module.css
@@ -66,18 +66,94 @@
 }
 
 .row{
-    display: flex;
-    gap: 5px;
+  display: flex;
+  gap: 5px;
+  align-items: center;
 }
 
 .negritoInfo{
-    font-weight: bold;
-}
-.row p {
-  margin: 0;
+  font-weight: bold;
 }
 
 .status{
   padding-bottom: 10px;
   border-bottom: 3px solid var(--cor-primaria);
+}
+
+.label {
+  display: block;
+  font-size: 12px;
+  font-weight: 600;
+  color: var(--cor-texto);
+  margin-bottom: 6px;
+}
+
+.input,
+.bioTextarea {
+  width: 100%;
+  padding: 10px 15px;
+  border-radius: 10px;
+  font-size: 14px;
+  color: var(--cor-texto);
+  outline: none;
+  transition:
+    border 0.25s,
+    box-shadow 0.25s,
+    background 0.25s;
+}
+
+.input {
+  border: 1px solid var(--cor-borda);
+  background: var(--cor-amarelo-escuro);
+}
+
+.input:focus {
+  border-color: var(--cor-borda);
+  box-shadow: 0 0 8px var(--cor-amarelo-medio);
+  background: var(--cor-secundaria);
+}
+
+.input:-webkit-autofill,
+.input:-webkit-autofill:hover,
+.input:-webkit-autofill:focus,
+.input:-webkit-autofill:active {
+  -webkit-text-fill-color: #fff !important;
+  box-shadow: 0 0 0 30px var(--cor-amarelo-escuro) inset !important;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+.buttonSave {
+  height: 10%;
+  background: var(--cor-rosa-medio);
+  border: none;
+  border-radius: 8px;
+  padding: 12px 25px;
+  font-size: 12px;
+  font-weight: 600;
+  cursor: pointer;
+  transition:
+    transform 0.18s ease,
+    box-shadow 0.18s ease;
+  color: var(--cor-texto);
+}
+
+.buttonSave:hover {
+  background-color: var(--cor-rosa-escuro);
+}
+
+.fieldGroupHalf {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+.select {
+  width: 100%;
+  background: var(--cor-amarelo-escuro);
+  border: 1px solid var(--cor-borda);
+  border-radius: 10px;
+  box-sizing: border-box;
+  padding: 9px;
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
 }
