fix: revisões finais

--- a/styles/colors.css
+++ b/styles/colors.css
@@ -32,7 +32,7 @@
   --cor-laranja-medio: #fd5a47;
   --cor-laranja-escuro: #c2483b;
 
-  --cor-amarelo-claro--cor-amarelo-claro: #ffe57a;
+  --cor-amarelo-claro: #ffe57a;
   --cor-amarelo-medio: #fbb829;
 
   --cor-amarelo-escuro: #534e40;
