--- a/styles/componentes/SearchBar.module.css
+++ b/styles/componentes/SearchBar.module.css
@@ -10,31 +10,37 @@
 @media (max-width: 768px) {
   .searchBar {
     min-width: 100%;
-    width: 100%;
-    padding: 0.4rem;
-  }
-  
-  .searchBar input {
-    font-size: 0.9rem;
-    margin-left: 0.3rem;
-  }
-  
-  .searchIconWrapper {
-    width: 28px;
-    height: 28px;
+    padding: 0.5rem;
   }
 }
-
-@media (max-width: 480px) {
-  .searchBar {
-    padding: 0.3rem;
-  }
-  
-  .searchBar input {
-    font-size: 0.8rem;
-  }
-  
-  .searchBar input::placeholder {
-    font-size: 0.8rem;
-  }
+.searchBar input {
+  font-weight: bold;
+  flex-grow: 1;
+  border: none;
+  outline: 1px;
+  background-color: transparent;
+  font-size: 1rem;
+  margin-left: 0.5rem;
+  color: #fff;
+}
+.searchBar input::placeholder {
+  color: #ffffff88;
+}
+.searchIconWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e53935;
+  color: white;
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  flex-shrink: 0;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  transition: filter 0.2s;
+}
+.searchIconWrapper:hover {
+  filter: brightness(0.9);
 }
