Revert "tedio de domingo"
This reverts commit c591b7eb4b25d969312ce6c05fd8b21305908b30.

--- a/styles/cadastro_login/login.module.css
+++ b/styles/cadastro_login/login.module.css
@@ -228,7 +228,7 @@
 /* Tablets e telas médias */
 @media (max-width: 768px) {
   .formBackground {
-    width: 90%;
+    width: 50vh;
     padding: 35px 25px;
   }
 
@@ -249,7 +249,7 @@
 /* Celulares pequenos */
 @media (max-width: 480px) {
   .formBackground {
-    width: 90%;
+    width: 50vh;
     padding: 25px 20px;
     border-radius: 15px;
   }
@@ -292,7 +292,7 @@
   /* Celulares pequenos */
   @media (max-width: 300px) {
     .formBackground {
-      width: 90%;
+      width: 45vh;
       padding: 25px 20px;
       border-radius: 15px;
     }
